* Fix bug #48645 (mb_convert_encoding() doesn't understand hexadecimal html-entities)